--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,31 @@
 {
   "manifest_version": 3,
-  "name": "My Chrome Extension",
+  "name": "ATS-Friendly Resume Generator",
   "version": "1.0",
-  "description": "My awesome Chrome extension with content script and background script",
-  "permissions": ["scripting", "tabs", "activeTab"],
-  "host_permissions": ["<all_urls>"],
-  "background": {
-    "service_worker": "./background.js"
-  },
+  "description": "Create ATS-friendly content for resumes using ChatGPT.",
+  "permissions": [
+    "activeTab"
+  ],
   "action": {
-    "default_title": "LinkBuddy",
-    "default_popup": "./popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/assets/icon16.png",
+      "48": "/assets/icon48.png",
+      "128": "/assets/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "/assets/icon16.png",
+    "48": "/assets/icon48.png",
+    "128": "/assets/icon128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "background": {
+    "service_worker": "background.js"
   }
 }
